# wundy

./: LICENSE  README.md  pyproject.toml
src/wundy/: __init__.py  first.py  schemas.py  ui.py  user_input.py
src/wundy/docs/: USER_MANUAL.md
tests/: first.py  user_input.py
