[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=64", "setuptools-scm[toml]>=6.2.3" ]

[project]
name = "wundy"
description = "A one dimensional finite element solver"
readme = "README.md"
keywords = [ "finite element" ]
requires-python = ">=3.10"
version = "0.1"
dependencies = [
    "scipy",
    "schema",
    "pyyaml",
    "pytest",
    "ruff",
    "ty"
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
norecursedirs = "mock"
addopts = "-ra --durations=10"
cache_dir = ".cache/pytest"
python_files = "*.py"
filterwarnings = [ "ignore::DeprecationWarning" ]

[tool.ruff]
target-version = "py311"
line-length = 100

format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
format.docstring-code-line-length = "dynamic"
format.docstring-code-format = false
lint.select = [ "F", "I" ]
lint.per-file-ignores."src/wundy/__init__.py" = [ "F401", "F403", "F405" ]

[tool.ty.src]
exclude = [
    "src/wundy/schemas.py"
]
include = ["src"]
